--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -8,14 +8,19 @@ jobs:
   changelog:
     runs-on: windows-latest
 
+    defaults:
+      run:
+        working-directory: .
+
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
-    - name: Kør update_changelog.py
-      run: python bot/update_changelog.py
+      - name: Kør update_changelog.py
+        run: python ./bot/update_changelog.py
+
