Bonus: Forbedr workflow med working-directory: bot

--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -10,7 +10,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: .
+        working-directory: bot
 
     steps:
       - name: Checkout repo
