--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -8,10 +8,6 @@ jobs:
   changelog:
     runs-on: windows-latest
 
-    defaults:
-      run:
-        working-directory: bot
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -22,6 +18,4 @@ jobs:
           python-version: 3.11
 
       - name: Kør update_changelog.py
-        run: python update_changelog.py
-
-
+        run: python bot/update_changelog.py
