--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
+      with:
+        persist-credentials: true
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -21,11 +23,12 @@ jobs:
       run: python bot/update_changelog.py
 
     - name: Commit and push CHANGELOG.md
-      run: |
-        git config user.name "Auto Changelog Bot"
-        git config user.email "changelog@bot.local"
-        git add CHANGELOG.md
-        git commit -m "Auto-update CHANGELOG.md" || echo "No changes to commit"
-        git push
+      if: success()
+      uses: EndBug/add-and-commit@v9
+      with:
+        author_name: Auto Changelog Bot
+        author_email: changelog@bot.local
+        message: "Auto-update CHANGELOG.md"
+        add: "CHANGELOG.md"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
