--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,7 @@ name: Auto Backup
 
 on:
   schedule:
-    - cron: "0 3 * * *"  # Kør dagligt kl. 03:00 UTC
+    - cron: "0 3 * * *"   # Kør dagligt kl. 03:00 UTC
   workflow_dispatch:      # Muliggør manuel kørsel fra GitHub Actions
 
 jobs:
@@ -27,12 +27,19 @@ jobs:
       - name: Run backup.py
         run: |
           if exist backup.py (
-            echo "🗄️ Kører backup-script..."
+            echo "▶ Kører backup-script..."
             python backup.py
           ) else (
             echo "⚠️ backup.py ikke fundet – springer backup-step over."
           )
         shell: cmd
+
+      # Upload backup som artifact (husk at backup.py skal gemme til fx backups/)
+      - name: Upload backup artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backup
+          path: backups/
 
       # (Ekstra step: log output for overblik)
       - name: Print backup-log summary
