--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-pandas
-numpy
-matplotlib
-scikit-learn
-python-dotenv
-ta
-seaborn
-schedule
-requests
+pandas==2.2.3
+numpy==2.2.6
+matplotlib==3.10.3
+scikit-learn==1.6.1
+python-dotenv==1.1.0
+seaborn==0.13.2
+schedule==1.2.2
+requests==2.32.3
+pytest==8.4.0
+ta==0.11.0
+ccxt==4.4.86
+scipy==1.15.3
