feat(core): Opgrader main.py til orkestrator + robust automation (smart startup, schedule, backup, Telegram)
- Flytter al tradinglogik ud af main.py og ind i engine.py som central pipeline.
- main.py fungerer nu kun som entrypoint/orchestrator og styrer:
    - Automatisk trading-cyklus via schedule (hver time)
    - Daglig status, heartbeat og automatisk retrain via schedule
    - Robust fejlhåndtering og auto-logging med safe_run
    - Automatisk backup efter hver cyklus (7 dages retention)
    - Opdatering af BotStatus.md og CHANGELOG.md efter hver run
    - Telegram-integration: sender status, metrics, grafer og backup-beskeder direkte
    - Smart startup: første trading-cyklus køres straks ved opstart, herefter schedule

- Tilføjer og opdaterer CI-workflow (ci.yml):
    - Kører både tests og main.py (full flow) i CI
    - Uploader artifacts: outputs, tests, logs, grafer
    - Klar til udvidelse med coverage, lint og Telegram-notifikation

- Forbedrer struktur, modularitet og dokumentation af alle kernefunktioner
- Alt klar til CI/CD, Docker, cloud og SaaS-opsætning

BREAKING CHANGE:
- main.py indeholder ikke længere trading-flow – dette ligger nu i engine.py
- For at køre hele systemet: start med \python main.py\ som entrypoint

Closes #roadmap #automation #telegram #backup #ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,19 +29,43 @@ jobs:
       run: |
         pytest tests/
 
-    # Upload artifacts fra outputs/ og tests/ (fx feature-data, grafer, logs)
-    - name: Upload test-artifacts (outputs + tests)
-      if: always()  # også ved test-fejl, så du kan debugge!
+    # Kør AI trading bot flow som end-to-end test (main.py)
+    - name: Kør main.py (full flow)
+      run: |
+        python main.py
+
+    # Upload artifacts: outputs, tests, logs og grafer
+    - name: Upload artifacts (outputs, tests, logs, grafer)
+      if: always()  # Kør selv ved fejl!
       uses: actions/upload-artifact@v4
       with:
         name: outputs-and-tests
         path: |
           outputs/
           tests/
+          logs/
+          graphs/
           !**/*.pyc
           !**/__pycache__/
 
+    # Tjek struktur og dependencies
     - name: Check struktur og dependencies
-      run: echo "✅ Struktur og auto-backup/artifacts OK"
+      run: echo "✅ Struktur og artifacts OK"
 
-# Bonus: Udvid med lint/format/coverage/artifacts/telegram senere!
+    # Bonus: Tilføj linters, coverage og Telegram-notifikation senere
+    # - name: Kør lint (fx black, flake8)
+    #   run: |
+    #     pip install black flake8
+    #     black --check .
+    #     flake8 .
+
+    # - name: Coverage
+    #   run: |
+    #     pip install coverage
+    #     coverage run -m pytest
+    #     coverage report
+
+    # - name: Telegram notification (optional)
+    #   run: |
+    #     python utils/telegram_utils.py --ci-report
+
