--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ models/*
 !data/README.md
 !data/.gitkeep
 
+# === TESTDATA: TILLAD test_data/*.csv til CI og tests ===
+!test_data/
+!test_data/*.csv
+
 # === Model- og ML-filer (IGNORER ALT TUNGE/MIDLERITIDIGE) ===
 *.h5
 *.keras
