--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -70,11 +70,15 @@ jobs:
         if: steps.changelog.outputs.changed == 'true'
         run: |
           git add CHANGELOG.md
-          git commit -m "Auto-update CHANGELOG.md"
-          # Find ud af hvilken branch vi er på og pull/push korrekt:
-          BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          git pull --rebase origin $BRANCH
-          git push origin $BRANCH
+          # Commit kun hvis der rent faktisk er ændringer staged:
+          if git diff --cached --quiet; then
+            echo "Ingen ændringer at committe."
+          else
+            git commit -m "Auto-update CHANGELOG.md"
+            BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            git pull --rebase origin $BRANCH
+            git push origin $BRANCH
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
