--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   changelog:
-    runs-on: ubuntu-latest   # Kør altid på Ubuntu for maksimal Actions-kompatibilitet
+    runs-on: ubuntu-latest
 
     permissions:
       contents: write   # Tillad skrivning til repo (nødvendigt for auto-commit/push)
@@ -24,13 +24,12 @@ jobs:
         with:
           python-version: 3.11
 
-      # 💡 Installer pip & afhængigheder (NYT STEP - før tests)
+      # Installer pip & afhængigheder
       - name: Installer pip & afhængigheder
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 💡 Ekstra tip: Print miljø og status for debugging
       - name: Print system info
         run: |
           echo "Kører på runner: $RUNNER_OS"
@@ -50,7 +49,6 @@ jobs:
       - name: Run update_changelog.py
         run: python bot/update_changelog.py
 
-      # 💡 Ekstra tip: Tjek om CHANGELOG.md faktisk er ændret
       - name: Check for CHANGELOG changes
         id: changelog
         run: |
@@ -66,16 +64,18 @@ jobs:
           git config --global user.name "RhinoTh3Dhino"
           git config --global user.email "reno_123@live.dk"
 
+      # ————— HER ER OPTIMERINGEN! —————
       - name: Commit and push CHANGELOG.md
         if: steps.changelog.outputs.changed == 'true'
         run: |
           git add CHANGELOG.md
-          # Commit kun hvis der rent faktisk er ændringer staged:
           if git diff --cached --quiet; then
             echo "Ingen ændringer at committe."
           else
             git commit -m "Auto-update CHANGELOG.md"
             BRANCH=$(git rev-parse --abbrev-ref HEAD)
+            # Robust pull før push for at undgå rejected push:
+            git pull --autostash origin $BRANCH
             git push origin $BRANCH
           fi
         env:
@@ -89,6 +89,5 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: "✅ CHANGELOG.md er automatisk opdateret og committet! 🚀"
 
-      # 💡 Ekstra tip: Print succes/summary til loggen for overblik
       - name: Done summary
         run: echo "✅ Workflow gennemført - se Telegram for besked hvis der var ændringer."
