✨ Step 2: Automatisk feature-importance og selection (Sprint 3) [DONE]
# Overblik:
- Implementeret automatisk beregning, visualisering og logning af feature-importance (Permutation + SHAP)
- Tilføjet auto-feature selection og retraining baseret på importance-threshold
- Fuld Telegram-integration: plots, top-features og summary sendes automatisk
- Logning af top-5 features til BotStatus.md og historik-CSV
- Robust fejlhåndtering, dtype-tjek, CI- og testvenligt
- Alle kodeændringer versionsstyret og dokumenteret i CHANGELOG.md
- Tilrettet alle relevante imports og modulopdeling

## Nye eller opdaterede filer:
- model_training.py   [MODIFICERET]
- feature_importance.py [NY/OPDATERET]
- feature_logging.py  [NY/OPDATERET]
- engine.py           [MODIFICERET]
- main.py             [MODIFICERET]
- telegram_utils.py   [MODIFICERET]
- weighted_vote_ensemble.py [NY]
- requirements.txt    [MODIFICERET]
- BotStatus.md        [MODIFICERET]

# Klar til Step 3: Enkel regime-analyse & adaptiv strategi 🚦

Co-authored-by: Reno (AI Trading Bot Engineer MVP)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==2.2.3
-numpy==2.2.6
+numpy==1.26.4
 matplotlib==3.10.3
 scikit-learn==1.6.1
 python-dotenv==1.1.0
@@ -12,3 +12,8 @@ ccxt==4.4.86
 scipy==1.15.3
 optuna==3.6.1
 python-telegram-bot==13.15
+shap==0.45.1           # <-- Tilføjet for explainable AI / feature importance
+
+# (Valgfrit, men ofte relevant)
+joblib==1.4.2          # For model-save/load (bruges af scikit-learn)
+
