Automatiseret pipeline: run_all.py med datafetch, feature engineering, labels, robust gitignore og versioneret requirements. Klar til end-to-end test!

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,31 @@
+# Core data science & ML
 pandas==2.2.3
 numpy==1.26.4
-matplotlib==3.10.3
 scikit-learn==1.6.1
-python-dotenv==1.1.0
-seaborn==0.13.2
-schedule==1.2.2
-requests==2.32.3
-pytest==8.4.0
-ta==0.11.0
-ccxt==4.4.86
 scipy==1.15.3
-optuna==3.6.1
+matplotlib==3.10.3
+seaborn==0.13.2
+
+# Technical Analysis & ML tools
+ta==0.11.0
+shap==0.45.1           # Forklaringskraft, feature importance
+joblib==1.4.2          # Model save/load
+
+# Trading & API
+python-binance==1.0.29
+ccxt==4.4.86
 python-telegram-bot==13.15
-shap==0.45.1           # <-- Tilføjet for explainable AI / feature importance
+requests==2.32.3
 
-# (Valgfrit, men ofte relevant)
-joblib==1.4.2          # For model-save/load (bruges af scikit-learn)
+# Scheduling, env, optimering
+schedule==1.2.2
+python-dotenv==1.0.0
+optuna==3.6.1
 
+# Test & udvikling
+pytest==8.4.0
+
+# (Ekstra – tilføj efter behov)
+# xgboost==2.0.3
+# lightgbm==4.3.0
+# catboost==1.2.5
