--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ seaborn==0.13.2
 
 # Technical Analysis & ML tools
 ta==0.11.0
+pandas_ta==0.3.14-beta.0      # <-- Tilføjet! Pandas TA library
 shap==0.45.1           # Forklaringskraft, feature importance
 joblib==1.4.2          # Model save/load
 
