feat: Step 5 – Fuldført eksport og analyse-pipeline (CSV/XLSX/JSON, top-5/10, markering, plots, robusthed)
- Tilføjet automatisk eksport af resultater til CSV, Excel (.xlsx) og JSON i test_walkforward.py
- Gemmer og backer nu automatisk top-5 og top-10 splits baseret på test_sharpe
- Markerer bedste split og top-5 direkte i CSV (is_best_split, is_top5_split)
- Tilføjet robust NaN/inf-håndtering, alle outputs klar til analyse
- Udvidet Telegram-upload af alle relevante filer (CSV/XLSX/JSON)
- Genererer og gemmer performance-plots (Sharpe, Winrate, Buy&Hold, Rolling Sharpe)
- README.md udvidet med analyse-guide og filstruktur
- analyze_walkforward.py udvidet til at understøtte pivot-analyse og flere grafer
- Refaktorering og kvalitetssikring af analyseflow og eksport

--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,8 @@ trades/
 .env
 .env.*
 secrets/
-config/*.json
-config/*.yml
+config/*.json       # <-- VIGTIG: Ignorerer alle JSON config, inkl. Google API secrets!
+config/client_secret_*.json  # <-- EKSTRA SIKKERHED: ALDRIG committe dine Google-secrets!
 
 # === VS Code, PyCharm, OS-filer ===
 .vscode/
