--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,14 @@ openpyxl==3.1.5
 # Test & udvikling
 pytest==8.4.0
 
+# Systemressource-monitorering
+psutil>=5.9.0
+GPUtil>=1.4.0
+
+# Deep Learning (vælg én af disse – slet den du ikke bruger)
+tensorflow>=2.16.1         # For GPU (pip install tensorflow automatisk med GPU på de fleste systemer)
+# torch>=2.3.0              # PyTorch hvis du bruger det
+
 # (Ekstra – tilføj efter behov)
 # xgboost==2.0.3
 # lightgbm==4.3.0
