--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ seaborn==0.13.2
 
 # Technical Analysis & ML tools
 ta==0.11.0
-pandas_ta==0.3.14-beta.0      # Pandas TA library
-shap==0.45.1                  # Forklaringskraft, feature importance
-joblib==1.4.2                 # Model save/load
+pandas_ta==0.3.14-beta.0
+shap==0.45.1
+joblib==1.4.2
 
 # Trading & API
 python-binance==1.0.29
@@ -24,9 +24,9 @@ python-dotenv==1.0.0
 optuna==3.6.1
 
 # Rapportering, markdown, tabel-output
-tabulate==0.9.0               # <-- VIGTIG for .to_markdown()
+tabulate==0.9.0
 
-# Excel support til Pandas (.to_excel/.read_excel)
+# Excel support til Pandas
 openpyxl==3.1.5
 
 # Test & udvikling
@@ -36,11 +36,11 @@ pytest==8.4.0
 psutil>=5.9.0
 GPUtil>=1.4.0
 
-# Deep Learning (vælg én af disse – slet den du ikke bruger)
-tensorflow>=2.16.1         # For GPU (pip install tensorflow automatisk med GPU på de fleste systemer)
-# torch>=2.3.0              # PyTorch hvis du bruger det
+# Deep Learning (vælg én eller begge)
+tensorflow>=2.16.1       # GPU-version anbefales (pip install tensorflow)
+# torch>=2.3.0           # Fjern # hvis du ønsker PyTorch support
 
-# (Ekstra – tilføj efter behov)
+# (Ekstra – tilføj efter behov, kræver ofte ekstra systemlibs på Windows)
 # xgboost==2.0.3
 # lightgbm==4.3.0
 # catboost==1.2.5
