--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        # === Installér altid torch (CPU-version til CI) ===
+        pip install torch --index-url https://download.pytorch.org/whl/cpu
 
     - name: Kør pytest på tests/
       run: |
